--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ section{
     flex-wrap: wrap;
 }
 .review .box-container .box{
-    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-    radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+    background: radial-gradient(ellipse farthest-corner at right bottom, #bba74f 0%, #bb913f 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
+    radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #f5f595 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
     margin: 1rem;
     padding: 1rem;
     text-align: center;
