--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ html{
     overflow-x: hidden;
 }
 body{
-    color: #f5f2ec;
-    background:  #010203;
+    color: #2b2a28;
+    background:  #009688;
 }
 
 section{
@@ -26,7 +26,7 @@ section{
 }
 .heading{
     text-align: center;
-    color:#c59733;
+    color:#262829;
     -webkit-background-clip: text;
     background-clip: text;
     font-size: 3.5rem;
@@ -41,13 +41,12 @@ section{
     flex-wrap: wrap;
 }
 .review .box-container .box{
-    background: radial-gradient(ellipse farthest-corner at right bottom, #bba74f 0%, #bb913f 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-    radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #f5f595 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+    background: white;
     margin: 1rem;
     padding: 1rem;
     text-align: center;
     position: relative;
-    box-shadow: rgba(223, 176, 21, 0.233) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    box-shadow: rgba(107, 105, 100, 0.233);
     flex: 1 1 30rem;
     border-radius: .7rem;
 }
@@ -62,22 +61,20 @@ section{
 }
 .review .box-container .box .social-media .fa:hover{
     color: white;
-    background: rgb(137, 245, 104);
+    background: #009688;
     transition: .3s;
 }
 .review .box-container .box .social-media .fa-linkedin{
-    background: rgb(6, 133, 175);
-    color: white;
+    color: rgb(6, 133, 175);
     border-radius: 50%;
 }
 .review .box-container .box .social-media .fa-github{
-    background: rgb(29, 30, 31);
-    color: white;
+    color: rgb(29, 30, 31);;
     border-radius: 50%;
 }
 .review .box-container .box .social-media .fa-envelope{
-    background: rgb(255, 35, 35);
-    color: white;
+    
+    color: rgb(199, 51, 51);
     border-radius: 50%;
 }
 .review .box-container .box .user img{
@@ -85,6 +82,7 @@ section{
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     height: 180px;
     width: auto;
+    margin-top: 1rem;
 }
 .review .box-container .box .user h3{
     font-size: 2.2rem;
